[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-structlog"
dynamic = [
    "version",
]
description = "Structlog handler for emitting logs to OpenTelemetry"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-sdk ~= 1.22",
  "structlog ~= 24.1",
]

[tool.hatch.version]
path = "src/opentelemetry-structlog/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/opentelemetry-structlog",
]
