[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-crewai"
dynamic = ["version"]
description = "OpenTelemetry CrewAI instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-api >= 1.40",
  "opentelemetry-instrumentation >= 0.61b0",
  "opentelemetry-semantic-conventions >= 0.61b0",
  "opentelemetry-util-genai >= 0.4b0",
]

[project.optional-dependencies]
instruments = [
  "crewai >= 1.15.5",
]

[project.entry-points.opentelemetry_instrumentor]
crewai = "opentelemetry.instrumentation.crewai:CrewAIInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation-genai/opentelemetry-instrumentation-crewai"
Repository = "https://github.com/open-telemetry/opentelemetry-python-contrib"
Issue = "https://github.com/SigNoz/signoz/issues/11663"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/crewai/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
